--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,62 @@ p{
   
 }
 
+@media (max-width: 800px) {
+    #man-wapper{
+        width: 100vw;
+        height: 100vh;
+        background:hsl(233, 47%, 7%);
+        display: flex;
+        flex-direction: column-reverse;
+       padding: 1em;
+    } 
+    .content{
+        background:  hsl(244, 38%, 16%);
+        color: rgb(255, 255, 255);
+        width:75%;
+        height: 65%;
+        justify-content: space-between;
+        align-items: center;
+        align-content: center; 
+        border-bottom-left-radius: 1em;
+        border-bottom-right-radius: 1em;  
+    }   
+    .content>h1{
+        font-size: 22px;
+        text-align: center;
+    }
+    .content>p{
+        padding-bottom: 3em;
+    }
+    h1{
+        font-family: 'Inter', sans-serif;
+    }
+    p{
+        text-align: center;
+        font-family: 'Lexend Deca', sans-serif;
+        padding: 0.6em;
+        font-size: 13px;
+    }
+    
+    .sta{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        justify-content: center;  
+    }
+    .image{
+        width: 75%;
+        height: 35%;  
+    }
+    .image img{
+        width: 100%;
+        height: 100%;
+        justify-content: space-between;
+        border-top-left-radius: 1em;
+        border-top-right-radius: 1em;
+       
+    }
+}
 
 
 
