--- a/css/style.css
+++ b/css/style.css
@@ -1,68 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-html, body {
-    margin: 0;
-    padding: 0;
-    height:50%;
-    background-color:  hsl(233, 47%, 7%);
-}
-#man-wapper{
-    width: 100vw;
-    height: 100vh;
-    background:hsl(233, 47%, 7%);
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
 
-.content{
-    background:  hsl(244, 38%, 16%);
-    color: rgb(255, 255, 255);
-    width:30%;
-    height: 50%;
-    justify-content: space-between;
-    align-items: center;
-    align-content: center;
-    padding: 2em;
-}
-.content>h1{
-    font-family: 'Inter', sans-serif;
-   font-size: 42px;
-}
-h1{
-    font-family: 'Inter', sans-serif;
-  
-}
-p{
-    font-family: 'Lexend Deca', sans-serif;
-}
 
-.sta{
-    display: flex;
-    justify-content: space-between;  
-}
 
-.image{
-    width: 30%;
-    height: 50%;  
-}
-.image img{
-    width: 100%;
-    height: 100%;
-   
-}
+
+
 .accent{
    display: block;
    background-color:  hsl(277, 64%, 61%);
   
 }
-
+/*
 @media (max-width: 800px) {
     #man-wapper{
         width: 100vw;
@@ -118,7 +64,7 @@ p{
         border-top-right-radius: 1em;
        
     }
-}
+}*/
 
 
 
