--- a/css/assets/image.css
+++ b/css/assets/image.css
@@ -1,7 +1,8 @@
 .image{
   width: 100%;
-  height: 100%; 
-
+  align-items: center;
+  align-content: center;
+  text-align: center;
 }
 img{
   width: 100%;
