--- a/css/assets/mediaQuery/mediaQuery.css
+++ b/css/assets/mediaQuery/mediaQuery.css
@@ -2,48 +2,40 @@
   #man-wapper{
     display:flex;
     flex-direction:row-reverse;
-    padding: 1rem;
     margin-top: 0;
     margin-bottom: 0;
     margin: auto;
-    width: 50vw;
-    height: 50vh;
-
+    padding: 0rem;
   }
-/*
+
   .content{
     background:  hsl(244, 38%, 16%);
     color: rgb(255, 255, 255);
-    align-items: center;
-    align-content: center;
-    text-align: center;
     border-top-left-radius: 1rem;
-    border-bottom-right-radius: 0;
-    width: 100%;
-    height: 100%;
+    border-bottom-left-radius: 1rem;
+    border-bottom-right-radius: 0rem;
   }
+  
 
   .sta{
     display: flex;
     flex-direction: row;
     text-align: center;
     justify-content:space-around;
-  
-  }
-  
-  .item {
-    margin-top:  2rem;
-   
-  }
-  
-  .item p {
-    color:  hsla(0, 0%, 100%, 0.6);
+    align-items: flex-end;
+    margin-top: 2rem;
   }
 
-  img{
-    border-top-left-radius: 0;
+  .image{
     border-top-right-radius: 1rem;
     border-bottom-right-radius: 1rem;
+    border-top-left-radius: 0;
   }
-  */
+  img{
+    height: auto;
+    width: auto;
+    border-top-right-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+    border-top-left-radius: 0;
+  }
 }
