--- a/css/assets/mediaQuery/mediaQuery.css
+++ b/css/assets/mediaQuery/mediaQuery.css
@@ -9,6 +9,8 @@
   }
 
   .content{
+    width: 50%;
+    height: 50%;
     background:  hsl(244, 38%, 16%);
     color: rgb(255, 255, 255);
     border-top-left-radius: 1rem;
@@ -22,20 +24,24 @@
     flex-direction: row;
     text-align: center;
     justify-content:space-around;
-    align-items: flex-end;
     margin-top: 2rem;
   }
 
   .image{
+    width: auto;
+    height: 50%;
+    display: block;
     border-top-right-radius: 1rem;
     border-bottom-right-radius: 1rem;
     border-top-left-radius: 0;
   }
   img{
-    height: auto;
-    width: auto;
+    height: 100%;
+    width: 100%;
     border-top-right-radius: 1rem;
     border-bottom-right-radius: 1rem;
     border-top-left-radius: 0;
   }
+  
+
 }
