--- a/css/assets/wapper.css
+++ b/css/assets/wapper.css
@@ -1,5 +1,6 @@
 #man-wapper{
-  height: 80%;
+  width: 100%;
+  height: 100vh;
   background:hsl(233, 47%, 7%);
   display: flex;
   flex-direction: column;
