--- a/css/assets/reset.css
+++ b/css/assets/reset.css
@@ -1,12 +1,54 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
-*{
+body {
+    font-family: 'DM Sans';
+    font-size: 1.6rem;
+    text-align: center;
+    overflow: overlay;
+    background-color:  hsl(233, 47%, 7%);
+  }
+  html {
+    scroll-behavior: smooth;
+  }
+  *, body,h1,h2,h3{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-html, body {
-    margin: 0;
-    padding: 0;
-    background-color:  hsl(233, 47%, 7%);
-}
+  }
+  body{
+    width: 100%;
+    height: 100%;
+  }
+  ul {
+    list-style: none;
+  }
+  button {
+    border: none;
+    font-family: inherit;
+  }
+
+
+
+
+
+
+
+
+
+
+
+.accent{
+    display: block;
+    background-color:  hsl(277, 64%, 61%);
+   
+ }
+ 
+ .attribution { 
+     font-size: 11px; text-align: center; 
+ }
+ .attribution a { 
+     color: hsl(228, 45%, 44%); 
+ }
+ .attribution{
+     display: none;
+ }
