--- a/css/assets/reset.css
+++ b/css/assets/reset.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
 body {
-    font-family: 'DM Sans';
+    font-family: 'Lexend Deca';
+    font-family: 'Inter';
     font-size: 1.6rem;
     text-align: center;
     overflow: overlay;
